--- a/style.css
+++ b/style.css
@@ -1,3 +1,153 @@
 /* nejsme vcerejsi, pouzivame moderni a intuitivni box model */
 html { box-sizing: border-box; }
 *, ::after, ::before { box-sizing: inherit; }
+
+p{
+    font-family:monospace;
+    color:white;
+    font-size:20px;
+    padding:20px;
+  }
+
+  h2{
+    font-family:monospace;
+    color:white;
+    font-size:23px;
+    text-align:center;
+  }
+
+
+.medailon {
+    position: relative;
+    width: 20%;
+    padding:50px;
+  }
+  
+  .medailon img {
+    width: 100%;
+    border-radius: 50%;
+  }
+  
+  .jmeno {
+    font-size: 40px;
+    color: #ffffff;
+    text-align: center;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    position: absolute;
+    top: 10px;
+    left: 50px;
+    width: 80%;
+    height: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(19, 250, 161);
+    box-sizing: border-box;
+    border-radius: 50%;
+  }
+  
+  .medailon:hover .jmeno {
+    opacity: 1;
+  }
+  
+ 
+  .info {
+    border: 1px solid none;
+    background-color: hotpink;
+    padding: 20px;
+    border-radius: 50px;
+    float:center;
+    margin:-100px 700px;
+    text-align:left;
+    width:650px
+  }
+
+
+  .detstvi {
+    border: 1px solid none;
+    background-color: rgb(42, 25, 197);
+    padding: 20px;
+    border-radius: 50px;
+    float:left;
+    margin:200px 170px;
+    text-align:center;
+    width:2000px;
+    
+  }
+
+  .detstvi img {
+    width: 40%;
+    padding: 50px;
+  }
+
+
+
+  .ilustrace {
+    border: 1px solid none;
+    background-color: rgb(240, 77, 28);
+    padding: 20px;
+    border-radius: 50px;
+    float:left;
+    margin:-100px 400px;
+    text-align:center;
+    width:2000px
+  }
+
+  .ilustrace img{
+    width:500px;
+    margin:50px;
+    
+  }
+  video {
+    width:500px;
+    margin:50px
+    
+}
+
+  .kontext {
+    border: 1px solid none;
+    background-color: rgb(11, 170, 104);
+    padding: 40px;
+    border-radius: 50px;
+    float:left;
+    margin:200px 170px;
+    text-align:center;
+    width:2000px
+  }
+
+  .kontext img {
+    width: 50%;
+    padding:20px;
+    
+  }
+
+
+  footer {
+    border: 1px solid none;
+    background-color: rgb(228, 12, 12);
+    padding: 20px;
+    border-radius: 50px;
+    float:left;
+    margin:0 0;
+    text-align:left;
+    width:100%;
+  }
+
+
+.kontext img {
+    width:500px;
+}
+
+
+
+
+body {
+    background-color: #fff; /* bílé pozadí */
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.1) 1px, transparent 1px), 
+                      linear-gradient(to bottom, rgba(0, 0, 0, 0.1) 1px, transparent 1px); /* tenká černá mřížka */
+    background-size: 15px 15px; /* velikost mřížky */
+  }
+
+ 
+ 
